syntax = "proto3";
package test;
option go_package = "github.com/rainbow-me/platform-tools/grpc/protos/v1/test";

import "google/api/annotations.proto";  // Add this import for google.api.http

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string greeting = 1;
  string last_name = 2;
  string first_name = 3;
}

service HelloService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {post: "/hello",  body: "*"};
  }
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {string message = 1;}
message EchoResponse {
  string message = 1;
  string correlation_id = 2; // Added to return corr ID for verification
}